--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
+    <!-- 网络访问权限（必须，否则无法联网） -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 可选：允许读取网络状态（有些库/判断联网会用到） -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
     <application
         android:label="@string/app_name"
         android:name="${applicationName}"
